--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,122 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: xyz37.forwardv2raytelegramchannel.fun
-    port: 8080
-    cipher: auto
-    uuid: d2a28a5c-3e3d-4fa0-be5b-e6a8136d2039
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz37.forwardv2raytelegramchannel.fun
-  - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: a1.forwardv2raytelegramchannel.fun
-    port: 2095
-    cipher: auto
-    uuid: 19529d4e-8c0e-47d0-93de-bd9a31b476d2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: a1.forwardv2raytelegramchannel.fun
-  - &id003
-    name: 🇺🇸_US_美国->🇮🇹_IT_意大利
-    type: vmess
-    server: it1.cou.gay
-    port: 443
-    cipher: auto
-    uuid: 564ee758-abeb-4950-b13f-e4edba2f0254
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /it1?ed=2048
-      headers:
-        host: it1.cou.gay
-  - &id004
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
-    type: vmess
-    server: xyz20.forwardv2raytelegramchannel.fun
-    port: 2095
-    cipher: auto
-    uuid: 19529d4e-8c0e-47d0-93de-bd9a31b476d2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz20.forwardv2raytelegramchannel.fun
-  - &id005
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
-    type: vmess
-    server: xyz46.forwardv2raytelegramchannel.fun
-    port: 8080
-    cipher: auto
-    uuid: d2a28a5c-3e3d-4fa0-be5b-e6a8136d2039
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz46.forwardv2raytelegramchannel.fun
-  - &id006
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 193.203.203.88
-    port: 2082
-    cipher: auto
-    uuid: 5f2d026e-1dbd-4bb0-aa61-b1bcc544ab2c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id007
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: k1.forwardv2raytelegramchannel.fun
-    port: 8080
-    cipher: auto
-    uuid: d2a28a5c-3e3d-4fa0-be5b-e6a8136d2039
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: k1.forwardv2raytelegramchannel.fun
-  - &id008
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
-    type: vmess
-    server: c.forwardv2raytelegramchannel.fun
-    port: 2095
-    cipher: auto
-    uuid: 19529d4e-8c0e-47d0-93de-bd9a31b476d2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: c.forwardv2raytelegramchannel.fun
-  - &id009
     name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
     server: mm2.shabijichang.com
@@ -136,160 +20,76 @@ proxies:
       path: /
       headers:
         host: mm2.shabijichang.com
-  - &id010
-    name: 🇺🇸_US_美国_2
+  - &id002
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: cf-lt.sharecentre.online
+    server: sbl2.shabijichang.com
     port: 80
     cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id011
-    name: 🇺🇸_US_美国_3
+        host: sbl2.shabijichang.com
+  - &id003
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 5.161.127.110
-    port: 3389
+    server: 5.161.155.22
+    port: 443
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: http
-  - &id012
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
-    type: vmess
-    server: xyz22.forwardv2raytelegramchannel.fun
-    port: 2052
-    cipher: auto
-    uuid: d62e72b0-14a2-439a-9912-c133bf89237b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz22.forwardv2raytelegramchannel.fun
-  - &id013
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: xyz8.forwardv2raytelegramchannel.fun
-    port: 2095
-    cipher: auto
-    uuid: 19529d4e-8c0e-47d0-93de-bd9a31b476d2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz8.forwardv2raytelegramchannel.fun
-  - &id014
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 183.232.238.77
-    port: 10010
-    cipher: auto
-    uuid: ab537195-b74c-3df5-a3a1-d504345e80bb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: dl2.fanqiecloud.top
-    port: 2086
-    cipher: auto
-    uuid: c2c77753-55e1-45fc-8806-23b77f08f349
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /sssddd
-      headers:
-        host: cf-nl.fanqiecloud.top
-  - &id016
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 162.159.133.68
-    port: 80
-    cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id017
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_6
-    type: vmess
-    server: xyz26.forwardv2raytelegramchannel.fun
-    port: 8080
-    cipher: auto
-    uuid: d2a28a5c-3e3d-4fa0-be5b-e6a8136d2039
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz26.forwardv2raytelegramchannel.fun
-  - &id018
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id019
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_7
-    type: vmess
-    server: xyz28.forwardv2raytelegramchannel.fun
-    port: 2096
-    cipher: auto
-    uuid: 819f16dc-5632-42dd-8427-09a702867016
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-  - &id020
-    name: 🇺🇸_US_美国_7
+  - &id004
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: tttt.ssfree.ru
     port: 443
     cipher: auto
-    uuid: 8537f35e-8f99-11ee-8c61-00163e49219e
+    uuid: af68a3fc-9062-11ee-b667-00163e49219e
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /search
-  - &id021
+  - &id005
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: 104.18.202.232
+    port: 2082
+    cipher: auto
+    uuid: 2bef6793-f6b6-46a9-8a21-0d78343a851b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /AlfredConfig
+      headers:
+        host: AlfredConfig.Lockey-vip.site
+  - &id006
+    name: 🇦🇺_AU_澳大利亚
+    type: vmess
+    server: au.takeshi.wiki
+    port: 80
+    cipher: auto
+    uuid: 59517e0b-ae1c-41d3-9c44-c44cea6f7546
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /takeshi.wiki
+      headers:
+        host: au.takeshi.wiki
+  - &id007
     name: 🇬🇧_GB_英国
     type: vmess
     server: 172.99.190.109
@@ -300,66 +100,8 @@ proxies:
     tls: true
     skip-cert-verify: true
     network: ws
-    ws-opts:
-      path: linkvws
-  - &id022
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_8
-    type: vmess
-    server: xyz18.forwardv2raytelegramchannel.fun
-    port: 2052
-    cipher: auto
-    uuid: d62e72b0-14a2-439a-9912-c133bf89237b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz18.forwardv2raytelegramchannel.fun
-  - &id023
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 198.41.223.215
-    port: 80
-    cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id024
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: fr-v2ray.freevmess.com
-    port: 8442
-    cipher: auto
-    uuid: 6773a666-5593-4c9f-aacd-52300b6a02d4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id025
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: xyz24.forwardv2raytelegramchannel.fun
-    port: 2095
-    cipher: auto
-    uuid: 19529d4e-8c0e-47d0-93de-bd9a31b476d2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /FORWARDV2RAY
-      headers:
-        host: xyz24.forwardv2raytelegramchannel.fun
-  - &id026
-    name: 🇺🇸_US_美国_11
+  - &id008
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: singapore.com
     port: 80
@@ -373,17 +115,94 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v005.ssrsub.com
-  - &id027
-    name: 🇦🇺_AU_澳大利亚
+  - &id009
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: us1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 9bda5d52-ebb1-44df-bacf-039182452475
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇦🇪_AE_阿联酋
+    type: trojan
+    server: 193.123.87.138
+    port: 15377
+    udp: true
+    password: b083c1d0-dfc9-3dae-949d-b8091f67f711
+    sni: freedb01.jd0001.top
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: freedb01
+  - &id011
+    name: 🇨🇦_CA_加拿大_1
+    type: trojan
+    server: canada11.zf.id.vn
+    port: 443
+    udp: true
+    password: dfaecaa8-8cb7-4947-9f0a-3299691692d6
+    sni: dl.kgvn.garenanow.com
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇨🇦_CA_加拿大_2
     type: vmess
-    server: au.takeshi.wiki
+    server: 193.203.203.88
+    port: 2082
+    cipher: auto
+    uuid: 5f2d026e-1dbd-4bb0-aa61-b1bcc544ab2c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id013
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: a8.wxlljc520.com
+    port: 443
+    cipher: auto
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 777.golinkwuxian.top
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: racknerd.gorgorchicken.one
+    port: 8443
+    cipher: auto
+    uuid: 1df0a6ca-5812-4bce-ddb1-9cd5548f4919
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /racknerd
+      headers:
+        host: racknerd.gorgorchicken.one
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: mm3.shabijichang.com
     port: 80
     cipher: auto
-    uuid: 59517e0b-ae1c-41d3-9c44-c44cea6f7546
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -425,18 +244,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -457,18 +264,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
   - name: SELECT
     type: select
     proxies:
@@ -487,18 +282,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
