--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,32 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇦_CA_加拿大
-    type: trojan
-    server: 172.105.5.158
-    port: 443
-    udp: true
-    password: 027c71ac-026b-4755-9a33-26558ce6f6a2
-    sni: ddragon.leagueoflegends.com
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇵🇱_PL_波兰
-    type: trojan
-    server: 70.34.252.233
-    port: 443
-    udp: true
-    password: fd2ef3e6-75b7-46cf-bc60-e8899851ed57
-    sni: proxmox.com
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    name: 🇺🇸_US_美国->🇱🇹_LT_立陶宛
     type: vmess
-    server: ld2.shabijichang.com
-    port: 80
+    server: cloud.dragonrzm.sbs
+    port: 8080
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: ce0d5151-7734-4189-b6ae-eb58e9af5603
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -39,18 +19,44 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ld2.shabijichang.com
-  - &id004
+        host: cloud.dragonrzm.sbs
+  - &id002
     name: 🇺🇸_US_美国_1
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: trojan
-    server: 
-      UNLK2.LVWF8N-HH8E-2300-NMOO-D2E9NAOBEACN.9D8F269F96B25232-759CBB36D6548597.KAUFEN
-    port: 20352
+    server: other.kunlun-ppg.com
+    port: 10850
     udp: true
-    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
-    sni: 206.237.5.220
+    password: 4de2e68e-3ffa-46a6-82f1-002ef5baab68
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
+  - &id004
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 167.68.5.183
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: 6us3.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us3
   - &id005
     name: 🇩🇪_DE_德国
     type: vmess
@@ -63,38 +69,80 @@ proxies:
     skip-cert-verify: true
     network: http
   - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 3.129.250.63
-    port: 56333
-    cipher: auto
-    uuid: 610fcb1f-ffa6-4819-d313-cd530be44a3c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id007
-    name: 🇫🇷_FR_法国
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
     type: trojan
-    server: 141.94.221.127
-    port: 80
+    server: other.kunlun-ppg.com
+    port: 10848
     udp: true
-    password: 9ebdbb4a-8ae6-45e8-9169-33fe68fdbaae
-    sni: ftp.debian.org
+    password: 4de2e68e-3ffa-46a6-82f1-002ef5baab68
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
-  - &id008
+  - &id007
     name: 🇺🇸_US_美国_3
     type: trojan
-    server: 167.68.5.183
+    server: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
+    port: 8443
+    udp: true
+    password: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=
+    sni: ams-trojan-grpc.carfin.tech
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: '@apt_mahdi'
+  - &id008
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40007
+    udp: true
+    password: 57edfecf-5694-4a34-8072-54a4f0636a62
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10838
+    udp: true
+    password: 4de2e68e-3ffa-46a6-82f1-002ef5baab68
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇪🇸_ES_西班牙
+    type: trojan
+    server: 65.20.102.54
+    port: 443
+    udp: true
+    password: 4fc77152e665415b9986d5b9b8f43601
+    sni: www.gpt123.one
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10845
+    udp: true
+    password: 4de2e68e-3ffa-46a6-82f1-002ef5baab68
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 89.116.180.179
     port: 443
     udp: true
     password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: 6us3.pqjc.buzz
+    sni: p6us4.pqjc.buzz
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /pq/us3
+      path: /pq/us4
 proxy-groups:
   - name: PROXY
     type: select
@@ -129,6 +177,10 @@ proxy-groups:
       - *id006
       - *id007
       - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -142,6 +194,10 @@ proxy-groups:
       - *id006
       - *id007
       - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
   - name: SELECT
     type: select
     proxies:
@@ -153,6 +209,10 @@ proxy-groups:
       - *id006
       - *id007
       - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
